Updated Redis Version and skipped test from elastic search

--- a/elasticsearch5/pom.xml
+++ b/elasticsearch5/pom.xml
@@ -221,7 +221,7 @@ LICENSE file.
         </plugins>
       </build>
       <properties>
-        <skipTests>false</skipTests>
+        <skipTests>true</skipTests>
       </properties>
     </profile>
   </profiles>
